--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^24.0.0",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
@@ -17,6 +18,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
