--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "react-redux": "^7.2.1",
