--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@types/styled-components": "^5.1.2",
     "bootstrap": "^4.5.2",
     "prop-types": "^15.7.2",
+    "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-bootstrap-range-slider": "^1.2.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
