--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.22",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
@@ -20,6 +21,8 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.2",
     "bootstrap": "^4.5.2",
+    "create-react-class": "^15.6.3",
+    "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
@@ -27,8 +30,10 @@
     "react-bootstrap-date-picker": "^5.1.0",
     "react-bootstrap-range-slider": "^1.2.1",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
