--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.2",
     "bootstrap": "^4.5.2",
     "create-react-class": "^15.6.3",
+    "moment": "^2.28.0",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.3.1",
