--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.2",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "create-react-class": "^15.6.3",
+    "formik": "^2.1.5",
     "moment": "^2.28.0",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
@@ -43,7 +45,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "PORT=2000 react-scripts start",
