certification, experience fields

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "create-react-class": "^15.6.3",
     "formik": "^2.1.5",
     "moment": "^2.28.0",
+    "node-sass": "^4.14.1",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.4.1",
@@ -40,6 +41,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tag-autocomplete": "^6.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
