--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap-sidebar": "0.0.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-hook-form": "^6.7.0",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
