--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-hook-form": "^6.7.0",
+    "react-number-format": "^4.4.1",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
