--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dropzone": "^11.2.0",
     "react-hook-form": "^6.7.0",
     "react-number-format": "^4.4.1",
+    "react-paginate": "^6.5.0",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
