--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap-date-picker": "^5.1.0",
     "react-bootstrap-range-slider": "^1.2.1",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-bs-notifier": "^6.0.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
