--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
     "yup": "^0.29.3"
