--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "bootstrap": "^4.5.2",
     "create-react-class": "^15.6.3",
     "formik": "^2.1.5",
+    "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "popper": "^1.0.1",
@@ -41,6 +44,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-hook-form": "^6.7.0",
+    "react-i18next": "^11.7.3",
     "react-number-format": "^4.4.1",
     "react-paginate": "^6.5.0",
     "react-rating": "^2.0.5",
