--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-flags-select": "^1.1.13",
     "react-hook-form": "^6.7.0",
     "react-i18next": "^11.7.3",
     "react-number-format": "^4.4.1",
